mobileview nearly finished

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,14 +1,12 @@
-@media screen and (max-width:320px) {
+/* @media screen and (min-width:375px) and (max-width:420px) {
     .intro-h1 {
-        /* top: 20%; */
-        font-size: 1.6rem;
+        top: 55%;
     }
+} */
 
-    
-
-    .btn {
-        font-size: 1.4rem;
-        padding: 1.5rem 6rem;
+@media screen and (max-width:375px) {
+    .intro-h1 {
+        top: 50%;
     }
 }
 
@@ -20,16 +18,33 @@
     .intro-img img {
         width: 30rem;
     }
-}
 
-@media screen and (max-width:375px) {
     .intro-h1 {
-        /* top: 70%; */
+        top: 45%;
+    }
+
+    .purpose-img img {
+        width: 32.5rem;
     }
 }
 
-/* @media screen and (min-width:375px) and (max-width:420px) {
+@media screen and (max-width:320px) {
     .intro-h1 {
-        top: 55%;
+        top: 42%;
+        font-size: 1.6rem;
     }
-} */
+
+    .btn {
+        font-size: 1.4rem;
+        padding: 1.5rem 6rem;
+    }
+
+    .purpose-img img {
+        width: 30rem;
+    }
+}
+
+
+
+
+
