--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,12 +1,16 @@
-/* @media screen and (min-width:375px) and (max-width:420px) {
-    .intro-h1 {
-        top: 55%;
-    }
-} */
 
 @media screen and (max-width:375px) {
     .intro-h1 {
         top: 50%;
+    }
+
+    .input {
+        padding: 1.5rem 6.5rem 1.5rem 3rem;
+    }
+
+    .other-btn {
+        padding: 1.5rem 7.25rem 1.5rem 7.25rem;
+        font-size: 1.4rem;
     }
 }
 
@@ -26,6 +30,15 @@
     .purpose-img img {
         width: 32.5rem;
     }
+
+    .input {
+        padding: 1.5rem 6.5rem 1.5rem 3rem;
+    }
+
+    .other-btn {
+        padding: 1.5rem 7.25rem 1.5rem 7.25rem;
+        font-size: 1.4rem;
+    }
 }
 
 @media screen and (max-width:320px) {
@@ -42,7 +55,249 @@
     .purpose-img img {
         width: 30rem;
     }
+
+    .details h4 {
+        font-size: 1.2rem;
+    }
+
+    .details p {
+        font-size: 1rem;
+    }
+
+    .input {
+        padding: 1.5rem 5rem 1.5rem 2rem;
+    }
+
+    .other-btn {
+        padding: 1.5rem 6rem 1.5rem 6rem;
+        font-size: 1.4rem;
+    }
+
 }
+
+@media screen and (min-width:500px) and (max-width: 800px) {
+    .intro-img img {
+        position: relative;
+        top: 2rem;
+        width: 50rem;
+    }
+
+    .logo-div img {
+        width: 20rem;
+        padding-left: 4rem;
+    }
+
+    .nav-ul li {
+        padding-right: 5rem;
+    }
+    
+    .nav-ul li:last-child {
+        padding-right: 7rem;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    .intro-h1 {
+        width: 80%;
+        text-align: center;
+        top: 60%;
+    }
+
+    .intro-p {
+        font-size: 1.8rem;
+        padding: 0 0;
+        padding-top: 0;
+        position: absolute;
+        top: 75%;
+        text-align: center;
+        width: 60%;
+    }
+
+    .features-section {
+        padding: 2rem 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .purpose-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 0 4rem;
+    }
+
+    .comments {
+        margin: 0 10rem;
+    }
+
+    .form-section {
+        margin: 0 7.5rem;
+    }
+}
+
+
+@media screen and (min-width:1020px) {
+    .logo-div img {
+        width: 20rem;
+        padding-left: 4rem;
+    }
+
+    .nav-ul li {
+        padding-right: 5rem;
+    }
+    
+    .nav-ul li:last-child {
+        padding-right: 7rem;
+    }
+
+    .intro-img img {
+        width: 55rem;
+        padding-top: 2.5rem;
+    }
+    
+    h1 {
+        font-size: 3rem;
+    }
+
+    .intro-h1 {
+        width: 80%;
+        text-align: center;
+        top: 60%;
+    }
+
+    .intro-p {
+        padding: 0 0;
+        padding-top: 0;
+        position: absolute;
+        top: 75%;
+        text-align: center;
+        width: 60%;
+    }
+
+    .mobile-curve {
+        display: none;
+    }
+
+    .desktop-curve {
+        display: block;
+        width: 100%;
+    }
+
+    .features-section {
+        padding: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .feature {
+        width: 70%;
+        justify-self: center;
+    }
+
+    .purpose-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 0 4rem;
+    }
+
+    .comments {
+        padding: 0 8rem;
+    }
+
+    .quot-mark {
+        position: relative;
+        left: 6.5rem;
+    }
+
+    .cc {
+        display: flex;
+        gap: 4rem;
+        justify-content: center;
+    }
+
+    .commentor {
+        width: 30rem;
+    }
+
+    .commentor:last-child {
+        margin-bottom: 2rem;
+    }
+
+    .form-section {
+        margin: 0 12.5rem;
+    }
+
+    .form-txt {
+        padding: 0 4rem;
+    }
+
+    .input {
+        padding: 1.75rem 20rem 1.75rem 4rem;
+        margin-bottom: 0;
+    }
+
+    .other-btn {
+        padding: 1.75rem 6rem ;
+    }
+
+    form {
+        flex-direction: row;
+        gap: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    .footer-section {
+        padding: 0 4rem;
+    }
+
+    .footer-cont {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-rows: auto;
+        gap: 3.5rem;
+    }
+
+    .footer-menu1 {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
+    .footer-icons img {
+        width: 3rem;
+        height: 3rem;
+    }
+}
+
+@media screen and (width:1024px) {
+    .quot-mark {
+        position: relative;
+        left: 1rem;
+    }
+}
+
+
+@media screen and (min-width:1300px) {
+    .quot-mark {
+        position: relative;
+        left: 12rem;
+    }
+
+    .form-txt {
+        width: 70rem;
+    }
+
+    .input {
+        padding: 1.75rem 45rem 1.75rem 5rem;
+    }
+}
+
+
+
 
 
 
