--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.google.com/specimen/Raleway');
-@import url('https://fonts.google.com/specimen/Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 
 .generic_family {
     font-family: 'Raleway', sans-serif;
@@ -33,6 +33,7 @@ main {
 
 h1 {
     font-size: 2.5rem;
+    font-family: 'Open Sans';
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     color: var(--White);
@@ -61,6 +62,7 @@ p {
     font-family: 'Open Sans', sans-serif;
     color: var(--White);
     line-height: 1.5em;
+    opacity: .7;
 }
 
 /* ---- VARIABLES ---- */
@@ -126,8 +128,14 @@ nav {
     font-size: 1.85rem;
     font-family: 'Raleway', sans-serif;
     color: var(--White);
+    opacity: .7;
 }
 
+.nav-ul li a:hover {
+    opacity: 1;
+    text-decoration: underline;
+    color: var(--Cyan);
+}
 /* ---- INTRO SECTION ---- */
 /* ---- INTRO SECTION ---- */
 /* ---- INTRO SECTION ---- */
@@ -175,9 +183,14 @@ nav {
     border: 1px solid transparent;
     border-radius: 3rem;
     margin: 2rem 0;
-    background: linear-gradient(var(--Cyan), var(--Blue));
+    background: var(--Blue);
     font-family: 'Open Sans', sans-serif;
     cursor: pointer;
+    outline: none;
+}
+
+.btn:hover {
+    background-color: var(--Cyan);
 }
 
 
@@ -223,7 +236,6 @@ nav {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    position: relative;
 }
 
 .purpose-img img {
@@ -251,11 +263,7 @@ nav {
     color: var(--Cyan);
 }
 
-.purpose-link::after {
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 6%;
+.line {
     width: 15rem;
     height: .25rem;
     background-color: var(--Cyan);
@@ -336,24 +344,36 @@ nav {
 
 .input,
 .other-btn {
-    width: 30rem;
     border-radius: 3rem;
 }
 
 .input {
-    padding: 2rem 0 2rem 3rem;
+    padding: 1.5rem 9rem 1.5rem 4rem;
     margin-bottom: 2rem;
     border: 1px solid transparent;
+    outline: none;
 }
+
 .other-btn {
-    padding: 1.75rem;
+    padding: 1.5rem 9rem 1.5rem 9rem;
     color: var(--White);
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     border: 1px solid transparent;
     font-weight: 400;
-    background: linear-gradient(var(--Cyan), var(--Blue));
+    background: var(--Blue);
     font-family: 'Open Sans', sans-serif;
+    outline: none;
     cursor: pointer;
+}
+
+.other-btn:hover {
+    background-color: var(--Cyan);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -390,6 +410,11 @@ nav {
     padding-bottom: 2rem;
 }
 
+.fm-p:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
 .footer-menu1 {
     padding-top: 8rem;
     padding-bottom: 5rem;
@@ -410,4 +435,66 @@ nav {
     display: flex;
     justify-content: center;
     gap: 2rem;
+}
+
+.footer-icons img:hover {
+    cursor: pointer;
+    background-color: var(--Cyan);
+}
+
+
+/* ---- ANIMATION ---- */
+
+@keyframes slideUP {
+    0% {
+        transform: translateY(100%);
+    }
+
+    50% {
+        transform: translateY(50%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+.slideUP {
+    animation: slideUP 1s 1 linear;
+}
+
+@keyframes slideLEFT {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    100% {
+        transform: translateX(-0%);
+    }
+}
+
+.slideLEFT {
+    animation: slideLEFT 1s 1 linear;
+}
+
+@keyframes slideRIGHT {
+    0% {
+        transform: translateX(100%);
+    }
+
+    50% {
+        transform: translateX(50%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.slideRIGHT {
+    animation: slideRIGHT 1s 1 linear;
 }
